// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should mount Component when has cards 1`] = `
<div>
  <div
    class="cards"
  >
    <span
      class="card"
    >
      pikachu
    </span>
  </div>
</div>
`;

exports[`Card should mount Component when has no cards 1`] = `
<div>
  <div
    class="cards"
  >
    <span
      class="no-cards"
    >
      Mão vazia
    </span>
  </div>
</div>
`;
